<resources>
    <string name="app_name">Plan My Day</string>
    <string name="los_angeles_attractions">LA Attractions:</string>
    <string name="crypto_com_arena">Crypto.com Arena</string>
    <string name="disneyland_park">Disneyland Park</string>
    <string name="dodgers_stadium">Dodgers Stadium</string>
    <string name="griffith_observatory">Griffith Observatory</string>
    <string name="hollywood_sign">Hollywood Sign</string>
    <string name="los_angeles_county_museum_of_art">Los Angeles County Museum of Art</string>
    <string name="santa_monica_pier">Santa Monica Pier</string>
    <string name="the_getty">The Getty</string>
    <string name="the_grove">The Grove</string>
    <string name="tommy_trojan_sculpture">Tommy Trojan Sculpture</string>
    <string name="traveler_the_horse_sculpture">Traveler the Horse Sculpture</string>
    <string name="universal_studios_hollywood">Universal Studios Hollywood</string>
    <string name="submit">Submit</string>
    <string name="taper_hall_of_humanities">Taper Hall of Humanities</string>
    <string name="usc_bookstore">USC Bookstore</string>
    <string name="salvatori_computer_science_center">Salvatori Computer Science Center</string>
    <string name="physical_education_building">Physical Education Building</string>
    <string name="mudd_hall_of_philosophy">Mudd Hall of Philosophy</string>
    <string name="leavey">Leavey Library</string>
    <string name="kaufman_international_dance_center">Kaufman International Dance Center</string>
    <string name="gwynn_wilson_student_union">Gwynn Wilson Student Union</string>
    <string name="doheny_memorial_library">Doheny Memorial Library</string>
    <string name="annenberg_school_of_communication">Annenberg School of Communication</string>
    <string name="tommy_trojan">Tommy Trojan Sculpture</string>
    <string name="traveler_the_horse">Traveler the Horse Sculpture</string>
    <string name="usc_attractions">USC Attractions:</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="log_out">Log Out</string>
    <string name="usc">USC</string>
    <string name="question">In which area would you like to plan your tour?</string>
    <string name="the_broad">The Broad</string>
    <string name="q2">Would you like to plan your tour in a single day or multiple days?</string>
    <string name="one_day">One-day</string>
    <string name="multi_day">Multi-day</string>
    <string name="dob_info_description">We ask for your date of birth as a mean to verify your identity when we receive a request to reset your password. You are more than welcome to use any 8-digit integer to replace your actual birthday, should you have privacy concerns. </string>
    <string name="dob_info_recovery_description">We asked for your date of birth upon registration as a mean to verify your identity when recovering account, but no constraint was imposed on the format. This can in fact be any string you chose when you registered.</string>
    <string name="title_activity_view_google_map">ViewGoogleMapActivity</string>
    <string name="password_icon">Password Icon</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email_icon">Email Icon</string>
    <string name="email">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="plan_my_day">Plan My Day</string>
    <string name="i_have_already_verified">I have already verified</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_date_of_birth_mm_dd_yyyy">Enter Date of Birth (MM/DD/YYYY)</string>
    <string name="register">Register</string>
    <string name="itinerary_preview">Itinerary Preview</string>
</resources>