<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/plan_my_day"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logoImageView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/emailLayout"
        android:layout_below="@id/appName"
        android:gravity="center">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/email_icon"/>
        <EditText
            android:id="@+id/resetEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:fontFamily="serif"
            android:layout_below="@id/appName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/inputLayout"
        android:layout_below="@id/emailLayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/bday"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="birthday Icon"/>
        <EditText
            android:id="@+id/dateOfBirthEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_date_of_birth_mm_dd_yyyy"
            android:inputType="date"
            android:fontFamily="serif"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="45dp"
            android:layout_height="34dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/dob_info_recovery_description"
            android:maxWidth="24dp"
            android:maxHeight="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/more_info" />
    </LinearLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Verify and Reset Password"
        style="@style/Widget.PlanMyDay.Button"
        android:background="@color/backgroundColor"
        android:layout_marginTop="16dp"
        android:layout_below="@id/inputLayout"/>

</RelativeLayout>
